--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,61 @@
 body {
-    font-family: "Roboto", "Raleway", sans-serif; 
-    color: #434455;
+  font-family: "Roboto", "Raleway", sans-serif;
+  color: #2e2f42;
+  background-color: #fff;
+}
+
+a {
+  text-decoration: none;
+  color: #2e2f42;
+}
+
+/* Header */
+.header {
+}
+
+.nav {
+}
+
+.logo-link {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.16667;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.logo-link span {
+  color: #4d5ae5;
+}
+
+.nav-list {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.nav-item {
+}
+
+.nav-item-link:hover,
+.nav-item-link:active,
+.nav-item-link:focus {
+  color: #404bbf;
+}
+
+/* address */
+
+.adress-link {
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.adress-link:hover,
+.adress-link:focus {
+  color: #404bbf;
 }
