--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body {
   font-family: "Roboto", "Raleway", sans-serif;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
   color: #2e2f42;
   background-color: #fff;
 }
@@ -23,25 +26,25 @@ a {
   line-height: 1.16667;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #4d5ae5;
 }
 
-.logo-link span {
-  color: #4d5ae5;
+.logo-link .logo-link-header {
+  color: #2e2f42;
 }
 
 .nav-list {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .nav-item {
 }
 
 .nav-item-link:hover,
-.nav-item-link:active,
-.nav-item-link:focus {
+.nav-item-link:focus,
+.nav-item-link:active {
   color: #404bbf;
 }
 
@@ -56,6 +59,114 @@ a {
 }
 
 .adress-link:hover,
-.adress-link:focus {
+.adress-link:focus,
+.adress-link:active {
   color: #404bbf;
+}
+
+/* Hero */
+
+.hero {
+  background-color: #2e2f42;
+}
+.hero-title {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07143;
+  text-align: center;
+  color: #fff;
+}
+.hero-btn {
+  color: #fff;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
+}
+.hero-btn:hover,
+.hero-btn:focus,
+.hero-btn:active {
+  background-color: #404bbf;
+}
+
+/* Our Advantages */
+.advantages {
+}
+.advantages-title {
+}
+.advantages-list {
+}
+.advantages-item {
+}
+.advantages-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+}
+.advantages-text {
+  color: #434455;
+}
+
+/* Our Team */
+.team {
+  background-color: #f4f4fd;
+}
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+.team-list {
+}
+.team-item {
+  background-color: #fff;
+}
+.team-photo {
+}
+.team-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  text-align: center;
+}
+.team-text {
+  text-align: center;
+  color: #434455;
+}
+
+/* Our Portfolio */
+.portfolio {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+.portfolio-list {
+}
+.portfolio-item {
+}
+.portfolio-link {
+}
+.portfolio-img {
+}
+.portfolio-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+}
+.portfolio-text {
+  color: #434455;
+}
+
+/* Footer */
+
+.footer {
+  background-color: #2e2f42;
+}
+
+.logo-link-footer {
+  color: #f4f4fd;
+}
+.footer-text {
+  line-height: 1.5;
+  color: #f4f4fd;
 }
