--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 body {
-  font-family: "Roboto", "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: #434455;
   background-color: #fff;
 }
 
@@ -23,7 +23,7 @@ a {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
@@ -50,8 +50,15 @@ a {
 
 /* address */
 
-.adress-link {
+.adress {
   font-style: normal;
+}
+.adress-list {
+}
+.adress-item {
+}
+
+.adress-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -72,14 +79,20 @@ a {
 .hero-title {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07143;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
 }
 .hero-btn {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   color: #fff;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
+  cursor: pointer;
 }
 .hero-btn:hover,
 .hero-btn:focus,
@@ -100,9 +113,11 @@ a {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 .advantages-text {
-  color: #434455;
+  line-height: 1.5;
 }
 
 /* Our Team */
@@ -112,9 +127,11 @@ a {
 .team-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
 }
 .team-list {
 }
@@ -126,35 +143,40 @@ a {
 .team-subtitle {
   font-weight: 500;
   font-size: 20px;
+  letter-spacing: 0.02em;
   text-align: center;
+  color: #2e2f42;
 }
 .team-text {
+  line-height: 1.5;
   text-align: center;
-  color: #434455;
 }
 
 /* Our Portfolio */
 .portfolio {
+}
+.portfolio-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
 }
 .portfolio-list {
 }
 .portfolio-item {
 }
-.portfolio-link {
-}
+
 .portfolio-img {
 }
 .portfolio-subtitle {
   font-weight: 500;
   font-size: 20px;
+  color: #2e2f42;
 }
 .portfolio-text {
-  color: #434455;
 }
 
 /* Footer */
